scaffold/typescript-go-main/testdata/baselines/reference/submodule/compiler/recursiveExportAssignmentAndFindAliasedType2.errors.txt
recursiveExportAssignmentAndFindAliasedType2_moduleDef.d.ts(2,5): error TS2303: Circular definition of import alias 'self'.
recursiveExportAssignmentAndFindAliasedType2_moduleDef.d.ts(3,5): error TS2303: Circular definition of import alias 'self'.
recursiveExportAssignmentAndFindAliasedType2_moduleDef.d.ts(6,5): error TS2303: Circular definition of import alias 'self'.
recursiveExportAssignmentAndFindAliasedType2_moduleDef.d.ts(7,5): error TS2303: Circular definition of import alias 'self'.


==== recursiveExportAssignmentAndFindAliasedType2_moduleA.ts (0 errors) ====
    /// <reference path="recursiveExportAssignmentAndFindAliasedType2_moduleDef.d.ts"/>
    import moduleC = require("moduleC");
    import ClassB = require("./recursiveExportAssignmentAndFindAliasedType2_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== recursiveExportAssignmentAndFindAliasedType2_moduleDef.d.ts (4 errors) ====
    declare module "moduleC" {
        import self = require("moduleD");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
        export = self;
        ~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
    }
    declare module "moduleD" {
        import self = require("moduleC");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
        export = self;
        ~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
    }
    
==== recursiveExportAssignmentAndFindAliasedType2_moduleB.ts (0 errors) ====
    class ClassB { }
    export = ClassB;
    